# mirl_extensions_conversion

./: Cargo.toml  README.md
src/: lib.rs  math.rs
src/conversion/: mod.rs
src/conversion/from_patch/: asynchronous.rs  bigfloat.rs  bigint.rs  hashmap.rs  hashset.rs  mod.rs  string.rs  tuple.rs  vec.rs
src/conversion/from_patch/ascii/: mod.rs
src/conversion/from_patch/numbers/: f128.rs  f16.rs  f32.rs  f64.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  isize.rs  mod.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  usize.rs
src/conversion/try_from_patch/: bigfloat.rs  bigint.rs  map.rs  mod.rs  string.rs  vec.rs
src/conversion/try_from_patch/ascii/: mod.rs
src/conversion/try_from_patch/numbers/: f128.rs  f16.rs  f32.rs  f64.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  isize.rs  mod.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  usize.rs
src/crate_support/: glfw.rs  mirl_values.rs  mod.rs
